Fix titles and subtitles alignment

--- a/source/stylesheets/layout/_main.scss
+++ b/source/stylesheets/layout/_main.scss
@@ -59,6 +59,9 @@ main {
 	}
 }
 
+
+.article__title,
+[role='doc-subtitle'],
 .article__content {
 	@media screen and (min-width: breakpoint('tablet')) {
 		max-width: 31.25rem;
